--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="col-lg-6">
             <div class="p-5">
               <h2 class="display-4">Keep Travelling!</h2>
-              <p>If travelling is your theme then aristocrat is the best partner. The top quality of wheels makes an easy move not only on the smooth surface but also on the rigid floor too. Pulling  stick is made of a fine grade of material which delivers a long lasting life of the product.</p>
+              <p>Quality and design both are kept in mind before making a product. Small details such as Service centre span all over India so if anything happened and then they are there to help you.</p>
             </div>
           </div>
         </div>
