--- a/index.html
+++ b/index.html
@@ -63,13 +63,33 @@
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/travel.jpg" alt="">
+              <img class="img-fluid" src="img/maze_blue_7440_03_1_2.jpg" alt="">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4">For those who travel...</h2>
-              <p>If travelling is your theme then aristocrat is the best partner. The top quality of wheels makes an easy move not only on the smooth surface but also on the rigid floor too. Pulling  stick is made of a fine grade of material which delivers a long lasting life of the product.</p>
+              <h2 class="display-4">Aristocrat Content Details</h2>
+              <p>
+                <div>Product Name : MAZE 360° STROLLY</div>
+                <div>Price : ₹3,168 / ₹5,280 50% Off</div>
+                <div>Description:
+                <ul>
+                  <li>Large sizes</li>
+                  <li>Material: Durable Polycarbonate with scratch-resistant texture</li>
+                  <li>Fixed combination lock</li>
+                  <li>Convipack with PVC pocket</li>
+                  <li>Premium trolley</li>
+                  <li>5 Year International Warranty</li>
+                  <li>MATERIAL  Durable Polycarbonate with scratch-resistant texture</li>
+                  <li>DIMENSIONS  Cabin 56 -56.5 X 37 X 23</li>
+                  <li>Check-in 68 -68.5 X 48.6 X 29</li>
+                  <li>Check-in 80 -80.6 X 55 X 34.8</li>
+                  <li>VOLUME  No</li>
+                  <li>WEIGHT  No</li>
+                </ul>
+              </div>
+              <a href="https://www.aristocratbags.in/maze-360-strolly.html?utm_source=greatdeal" class="btn btn-info" role="button">Buy Now</a>
+              </p>
             </div>
           </div>
         </div>
