--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
           </div>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4">Aristocrat Content Details</h2>
+              <h2 class="display-6">MAZE 360° STROLLY</h2>
               <p>
-                <div>Product Name : MAZE 360° STROLLY</div>
                 <div>Price : ₹3,168 / ₹5,280 50% Off</div>
                 <div>Description:
                 <ul>
@@ -101,13 +100,30 @@
         <div class="row align-items-center">
           <div class="col-lg-6">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/promoter_1.jpg" alt="">
+              <img class="img-fluid" src="img/aston67tatb_1_3_2.jpg" alt="">
             </div>
           </div>
           <div class="col-lg-6">
             <div class="p-5">
-              <h2 class="display-4">Keep Travelling!</h2>
-              <p>Quality and design both are kept in mind before making a product. Small details such as Service centre span all over India so if anything happened and then they are there to help you.</p>
+              <h2 class="display-6">ASTON 360° STR</h2>
+              <p>
+                <div>Price : ₹3,500.00 / ₹7,000.00 50% Off</div>
+                <div>Description:
+                <ul>
+                  <li>Convi-pack for organized and convenient packing</li>
+                  <li>Fixed combination lock</li>
+                  <li>Textured scratch-resistant surface</li>
+                  <li>5 Year International Warranty</li>
+                  <li>MATERIAL Durable Polycarbonate with scratch-resistant texture</li>
+                  <li>DIMENSIONS  Cabin 55 -55 X 37 X 20</li>
+                  <li>Check-in 67 -67 X 47 X 20</li>
+                  <li>Check-in 79 -79 X 52 X 31</li>
+                  <li>VOLUME  No</li>
+                  <li>WEIGHT  No</li>
+                </ul>
+              </div>
+              <a href="https://www.aristocratbags.in/aston-360-str.html?utm_source=greatdeal" class="btn btn-info" role="button">Buy Now</a>
+              </p>
             </div>
           </div>
         </div>
@@ -119,13 +135,35 @@
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/promoter_4.jpg" alt="">
+              <img class="img-fluid" src="img/2_cameron_blue_2_1.jpg" alt="">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4">Let there be rock!</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+              <h2 class="display-6">CAMERON 4W EXP STROLL</h2>
+              <p>
+                <div>Price : ₹3,210 / ₹5,350 50% Off</div>
+                <div>Description:
+                <ul>
+                  <li>Bigger Sizes</li>
+                  <li>3" Expander for 71, 81 sizes</li>
+                  <li>Fixed Lock</li>
+                  <li>Complimentary Utility Pouch</li>
+
+                  <li>ID Tag</li>
+                  <li>Corner guards</li>
+                  <li>Kick guard</li>
+                  <li>5 Year International Warranty</li>
+                  <li>MATERIAL  Premium 1200 D Polyester fabric with lush trims</li>
+                  <li>DIMENSIONS  Cabin 59 -59 x 39 x 28</li>
+                  <li>Check-in 71 -71 X 45 X 31</li>
+                  <li>Check-in 81 -81 X 51 X 35</li>
+                  <li>VOLUME  N/A</li>
+                  <li>WEIGHT  N/A</li>
+                </ul>
+              </div>
+              <a href="https://www.aristocratbags.in/cameron-4w-exp-strolly-59-blue-1353.html?utm_source=greatdeal" class="btn btn-info" role="button">Buy Now</a>
+              </p>
             </div>
           </div>
         </div>
